--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 asgiref==3.3.1
 Django==3.1.7
+django-extensions==3.1.1
 django-seed==0.2.2
 djangorestframework==3.12.2
 Faker==6.6.1
 numpy==1.20.1
+pydotplus==2.0.2
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.15.0
